# deep-research

./: .env.example  .gitignore  README.md  privacy.md  pyproject.toml
_research/: anthropic-multiagent.txt  community-sentiment-hn-github.md  community-sentiment.html  helicone-deepresearch.txt  hf-open-deep-research.txt  langchain-open-deep-research.txt  storm-arxiv.txt  storm-stanford.txt  tavily-vs.txt  tongyi-deepresearch.txt
docs/: reddit-api-application.md
docs/adr/: 0001-orchestration-on-anthropic-sdk.md  0002-pivot-to-claude-code-skill.md  0003-wrap-built-in-deep-research.md
docs/superpowers/specs/: 2026-05-31-research-agent-design.md
infra/reddit-apify-mcp/: README.md  reddit-apify.js
skills/deep-research/: SKILL.md  report-template.html
skills/deep-research-plus/: SKILL.md
src/research_agent/: __init__.py  cli.py  config.py  models.py  state.py
src/research_agent/eval/: harness.py  rubric.py  seeds.py
src/research_agent/llm/: agent.py  anthropic_client.py  base.py  fake.py
src/research_agent/pipeline/: classifier.py  orchestrator.py  report.py  run.py  scope.py  subagent.py  verify.py  write.py
src/research_agent/tools/: academic.py  base.py  factory.py  github.py  web.py
tests/: conftest.py  test_agent_loop.py  test_classifier.py  test_orchestrator.py  test_pipeline_e2e.py  test_providers.py  test_report_state_scope.py  test_verify.py
